--- a/changelog
+++ b/changelog
@@ -2,3 +2,4 @@
 08.10.2013 - Ryan - Installed GIT on the grey dell laptop, created a folder of tutorials to keep things organized
 08.10.2013 - Ryan - Created a writeup for the shieldbot
 08.10.2013 - Ryan - Created a writeup for the magnetic compass
+08.10.2013 - Ryan - Started a writeup for the ITG3200.  Not done.
